# clipdigest

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
clipdigest/: __init__.py  bridge.py  cli.py  config.py  llm.py  manifest.py  render.py  select.py  transcript.py
