[project]
name = "clipdigest"
version = "1.0.0"
description = "Condense a long YouTube video into a comprehension-preserving web viewer."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "youtube-transcript-api>=0.6.2",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39.0"]
openai = ["openai>=1.40.0"]
ytdlp = ["yt-dlp>=2024.0.0"]

[project.scripts]
clipdigest = "clipdigest.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["clipdigest"]
